# howcopy

./: .gitignore  README.md  flake.nix  pyproject.toml
howcopy/: __init__.py  engine.py  grader.py  main.py  prompts.py  scenarios.py
