[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "howcopy"
version = "0.1.0"
description = "OPERATION HOW COPY — terminal drill: translate daily life into tactical radio comms, graded by an LLM instructor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["anthropic>=0.40"]

[project.scripts]
howcopy = "howcopy.main:run"

[tool.setuptools.packages.find]
include = ["howcopy*"]
